--- a/frameworks/ets/taihe/nfc_cardEmulation/BUILD.gn
+++ b/frameworks/ets/taihe/nfc_cardEmulation/BUILD.gn
@@ -33,7 +33,7 @@ ohos_taihe("run_taihe") {
   ]
 }
 
-config("scene_ani_extra_config") {
+config("nfc_taihe_config") {
   cflags = [
     "-flto=full",
   ]
@@ -72,7 +72,7 @@ taihe_shared_library("nfc_fwk_taihe_cardEmulation") {
   ]
 
   configs = [
-    ":scene_ani_extra_config",
+    ":nfc_taihe_config",
   ]
 
   external_deps = [
