--- a/test/fuzztest/nfcfuzz.gni
+++ b/test/fuzztest/nfcfuzz.gni
@@ -46,6 +46,7 @@ fuzz_external_deps = [
   "ability_runtime:app_manager",
   "ability_runtime:dataobs_manager",
   "access_token:libaccesstoken_sdk",
+  "bounds_checking_function:libsec_shared",
   "bundle_framework:appexecfwk_base",
   "bundle_framework:appexecfwk_core",
   "cJSON:cjson_static",
