fix: crashed on tablet without nfc
Signed-off-by: bitbegin <lizhifeng23@huawei.com>

--- a/frameworks/js/napi/cardEmulation/BUILD.gn
+++ b/frameworks/js/napi/cardEmulation/BUILD.gn
@@ -36,6 +36,7 @@ ohos_shared_library("cardemulation") {
   sources = [
     "$NFC_DIR/frameworks/js/napi/common/nfc_ha_event_report.cpp",
     "$NFC_DIR/frameworks/js/napi/common/nfc_napi_common_utils.cpp",
+    "$NFC_DIR/frameworks/js/napi/common/nfc_napi_control.cpp",
     "nfc_napi_cardEmulation.cpp",
     "nfc_napi_cardEmulation_adapter.cpp",
     "nfc_napi_hce_adapter.cpp",
@@ -53,6 +54,7 @@ ohos_shared_library("cardemulation") {
     "c_utils:utils",
     "hiappevent:hiappevent_innerapi",
     "hilog:libhilog",
+    "init:libbegetutil",
     "ipc:ipc_core",
     "napi:ace_napi",
     "samgr:samgr_proxy",
