--- a/frameworks/js/napi/tag/BUILD.gn
+++ b/frameworks/js/napi/tag/BUILD.gn
@@ -36,6 +36,7 @@ ohos_shared_library("tag") {
   sources = [
     "$NFC_DIR/frameworks/js/napi/common/nfc_ha_event_report.cpp",
     "$NFC_DIR/frameworks/js/napi/common/nfc_napi_common_utils.cpp",
+    "$NFC_DIR/frameworks/js/napi/common/nfc_api_control.cpp",
     "nfc_napi_foreground_dispatch.cpp",
     "nfc_napi_ndef_message.cpp",
     "nfc_napi_tag.cpp",
@@ -62,6 +63,7 @@ ohos_shared_library("tag") {
     "c_utils:utils",
     "hiappevent:hiappevent_innerapi",
     "hilog:libhilog",
+    "init:libbegetutil",
     "ipc:ipc_core",
     "ipc:ipc_napi",
     "napi:ace_napi",
