--- a/frameworks/js/napi/controller/BUILD.gn
+++ b/frameworks/js/napi/controller/BUILD.gn
@@ -35,6 +35,7 @@ ohos_shared_library("controller") {
 
   sources = [
     "$NFC_DIR/frameworks/js/napi/common/nfc_ha_event_report.cpp",
+    "$NFC_DIR/frameworks/js/napi/common/nfc_api_control.cpp",
     "nfc_napi_controller.cpp",
     "nfc_napi_controller_adapter.cpp",
     "nfc_napi_controller_event.cpp",
@@ -52,6 +53,7 @@ ohos_shared_library("controller") {
     "common_event_service:cesfwk_innerkits",
     "hiappevent:hiappevent_innerapi",
     "hilog:libhilog",
+    "init:libbegetutil",
     "ipc:ipc_core",
     "napi:ace_napi",
     "samgr:samgr_proxy",
