--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -129,6 +129,7 @@ nfc_service_external_deps = [
   "ability_base:want",
   "ability_base:zuri",
   "ability_runtime:ability_manager",
+  "ability_runtime:ability_connect_callback_stub",
   "ability_runtime:app_manager",
   "ability_runtime:dataobs_manager",
   "access_token:libaccesstoken_sdk",
